[package]
name = "rust-pushrod"
version = "0.2.11"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-pushrod/"
documentation = "http://docs.rs/crate/rust-pushrod/"
keywords = ["piston", "opengl", "ui", "gui", "conrod"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
exclude = [
    "examples/*.rs",
]

[lib]
name = "pushrod"
path = "src/lib.rs"

[dependencies]
piston_window = "^0.89"
pistoncore-glfw_window = "^0.49"
lazy_static = "^1.3"
rand = "0.3"
find_folder = "^0.3"
