[package]
name = "rust-pushrod"
version = "0.3.7"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Pushrod UI Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-pushrod/"
documentation = "http://docs.rs/crate/rust-pushrod/"
keywords = ["piston", "opengl", "ui", "gui", "conrod"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
exclude = [
    "examples/*.rs",
]

[lib]
name = "pushrod"
path = "src/lib.rs"

[dependencies]
piston = "^0.42"
pistoncore-glfw_window = "^0.49"
piston2d-opengl_graphics = "^0.59"
piston2d-graphics = "^0.30"
gl = "^0.11"
rand = "0.3"
find_folder = "^0.3"
